# latex-function-tables

./: .gitignore  .travis.yml  LICENSE  README.md  function-table.sublime-project  latex-function-tables.cabal  stack.yaml
app/: Main.hs
src/Text/LaTeX/: FunctionTable.hs
src/Text/LaTeX/Internal/: FunctionTable.hs
test/: Spec.hs
