name:                latex-function-tables
version:             0.1.0.1
synopsis:            Function table specifications in latex
description:         Please see README.md
homepage:            https://github.com/unitb/latex-function-tables
license:             BSD3
license-file:        LICENSE
author:              Simon Hudon
maintainer:          simon.hudon@gmail.com
copyright:           2016 Simon Hudon
category:            Text
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Text.LaTeX.FunctionTable
                       -- Text.LaTeX.FunctionTable.Parser
                       Text.LaTeX.Internal.FunctionTable
  build-depends:       base >= 4.7 && < 5
                     , bifunctors
                     , HaTeX
                     , lens
                     , mtl
                     , parsec
                     , semigroups
                     , template-haskell
                     , text
                     , th-printf
  default-language:    Haskell2010
  default-extensions:  DeriveFunctor,DeriveFoldable,DeriveTraversable

executable example
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , HaTeX
                     , process
                     , latex-function-tables
                     , template-haskell
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , latex-function-tables
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/unitb/latex-function-tables
